created bear with p5.js

--- a/labs/lab1/index.html
+++ b/labs/lab1/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ariella Hardwick N220 | Lab1</title>
+    <title>Lab1</title>
   </head>
   <body>
-    TODO: Insert lab one here
+    p5.js bear
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
