added lab 2 link to main page

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -6,6 +6,9 @@
     <title>Lab2</title>
   </head>
   <body>
+    <div style="text-align: right">
+      <a href="../../index.html">BACK TO MAIN PAGE</a>
+    </div>
     <h1>Lab 2 | Animation and Conditional Operators</h1>
     <article>
       <h2>Counter</h2>
@@ -16,7 +19,7 @@
       <div id="counterApp"></div>
     </article>
     <article>
-      <h2>Puck Side App</h2>
+      <h2>Puck Side</h2>
       <p>
         Draws a circle where the mouse is. Circle is blue when mouse is on left
         side of canvas and red on the right side. Canvas is 400x300.
@@ -24,7 +27,7 @@
       <div id="puckSideApp"></div>
     </article>
     <article>
-      <h2>World Wrap App</h2>
+      <h2>World Wrap</h2>
       <p>
         Starts drawing ball on the left hand of the screen - make it move to the
         right 5px per frame. When the circle reaches 800pc to the right, the
