--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <p>Summer 2023</p>
 
     <h2>Lab 1</h2>
-    <p><a href="./labs/lab1/index.html">First Example</a></p>
+    <p><a href="./labs/lab1/index.html">p5.js bear</a></p>
+    <h2>Lab 2</h2>
+    <p>
+      <a href="./labs/lab2/index.html"
+        >Animation and Conditional Operators Exercises</a
+      >
+    </p>
   </body>
 </html>
