--- a/labs/lab1/index.html
+++ b/labs/lab1/index.html
@@ -6,7 +6,11 @@
     <title>Lab1</title>
   </head>
   <body>
-    p5.js bear
+    <div style="text-align: right">
+      <a href="../../index.html">BACK TO MAIN PAGE</a>
+    </div>
+    <h1>Lab 1 | Personal Composition</h1>
+    <h2>P5 Bear</h2>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
     <script src="./js/app.js"></script>
   </body>
