--- a/index.html
+++ b/index.html
@@ -9,14 +9,29 @@
     <h1>Ariella Hardwick</h1>
     <p>N220 Projects</p>
     <p>Summer 2023</p>
-
-    <h2>Lab 1</h2>
-    <p><a href="./labs/lab1/index.html">p5.js bear</a></p>
-    <h2>Lab 2</h2>
-    <p>
-      <a href="./labs/lab2/index.html"
-        >Animation and Conditional Operators Exercises</a
-      >
-    </p>
+    <ul>
+      <li>
+        <h2>Lab 1</h2>
+        <p>
+          <a href="./labs/lab1/index.html"
+            >Intro to p5.js | Personal Composition</a
+          >
+        </p>
+      </li>
+      <li>
+        <h2>Lab 2</h2>
+        <p>
+          <a href="./labs/lab2/index.html"
+            >Animation and Conditional Operators</a
+          >
+        </p>
+      </li>
+      <li>
+        <h2>Lab 3</h2>
+        <p>
+          <a href="./labs/lab3/index.html">Loops</a>
+        </p>
+      </li>
+    </ul>
   </body>
 </html>
