--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
           <a href="./labs/lab3/index.html">Loops</a>
         </p>
       </li>
+      <li>
+        <h2>Lab 4</h2>
+        <p>
+          <a href="./labs/lab4/index.html">Arrays</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
