--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
           <a href="./labs/lab4/index.html">Arrays</a>
         </p>
       </li>
+      <li>
+        <h2>Lab 5</h2>
+        <p>
+          <a href="./labs/lab5/index.html">DOM</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
