--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
           <a href="./labs/lab5/index.html">DOM</a>
         </p>
       </li>
+      <li>
+        <h2>Lab 6</h2>
+        <p>
+          <a href="./labs/lab6/index.html">Objects</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
