added a lot more comments to lab6

--- a/labs/lab6/exercise2/index.html
+++ b/labs/lab6/exercise2/index.html
@@ -25,13 +25,13 @@
       Consider using a function to update the document so you are not repeating
       yourself across two functions.
     </p>
-    <hr>
-        <p>Name: <span id="name"></span></p>
+    <hr />
+    <p>Name: <span id="name"></span></p>
     <p>Happiness: <span id="happiness"></span></p>
     <p>Energy: <span id="energy"></span></p>
     <button id="feedButton">Feed</button>
-    <button id="playButton">Play</button
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
+    <button id="playButton">Play</button>
+
     <script src="./app.js"></script>
   </body>
 </html>
