updated rgb to hex

--- a/labs/lab6/exercise1/index.html
+++ b/labs/lab6/exercise1/index.html
@@ -8,21 +8,19 @@
       .dog {
         margin-bottom: 10px;
         padding: 10px;
-        border: 1px solid #ccc;
+        border: 1px solid #cccccc;
         border-radius: 20px;
       }
       .different-bg {
-        background-color: rgb(236, 255, 254);
+        background-color: #ecfffe;
       }
     </style>
   </head>
   <body>
-    <div style="text-align: right">
-      <a href="../index.html">BACK TO LAB 6</a>
-    </div>
+    <a href="../index.html" class="backNav">back to lab</a>
 
-    <h1>Lab 6 | Objects</h1>
-    <h2>List Display</h2>
+    <p>Lab 6 | Objects</p>
+    <h1>List Display</h1>
     <p>
       Create an HTML5 application with a collection (array of objects) in
       JavaScript that with entries for something you have a collection of
@@ -43,8 +41,7 @@
       <h3>Dog List</h3>
       <p>
         Background color of the list item will be
-        <span class="different-bg">rgb(236, 255, 254)</span> if the dog's size
-        is large.
+        <span class="different-bg">#ecfffe</span> if the dog's size is large.
       </p>
       <div id="collection"></div>
     </div>
