updated relative links & added js comments

--- a/labs/lab1/index.html
+++ b/labs/lab1/index.html
@@ -6,12 +6,17 @@
     <title>Lab1</title>
   </head>
   <body>
-    <div style="text-align: right">
-      <a href="../../index.html">BACK TO MAIN PAGE</a>
+    <a href="../../index.html" class="backNav">back to main</a>
+    <p>Lab 1 | Personal Composition</p>
+    <h1>P5 Bear</h1>
+    <div>
+      Using P5 and JavaScript, create an image of your choosing. <br />Use at
+      least five drawing methods (circle, fill, stroke...) and two variables in
+      your composition.
     </div>
-    <h1>Lab 1 | Personal Composition</h1>
-    <h2>P5 Bear</h2>
+    <!-- Import the p5.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
+    <!-- Import the app.js file containing the code that draws the bear -->
     <script src="./js/app.js"></script>
   </body>
 </html>
