--- a/labs/lab3/exercise2/index.html
+++ b/labs/lab3/exercise2/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lab3 | Loops: Pyramid</title>
+    <title>Pyramid</title>
   </head>
   <body>
-     <body>            
-       <div style="text-align: right">
-      <a href="../index.html">BACK TO LAB 3</a>
-    </div>
+    <a href="../index.html" class="backNav">back to lab</a>
 
-    <h1>Lab 3 | Loops: Pyramid</h1>
+    <p>Lab 3 | Loops</p>
+    <h1>Pyramid</h1>
     <p>
       Using nested loops (one within the other) recreate this composition with
       only one line having a drawing command on it (rect/circle/line/etc..).
     </p>
+    <!-- Import the p5.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
+    <!-- Import the app.js file -->
     <script src="./app.js"></script>
   </body>
 </html>
