--- a/labs/lab3/index.html
+++ b/labs/lab3/index.html
@@ -6,10 +6,7 @@
     <title>Lab3</title>
   </head>
   <body>
-    <div style="text-align: right">
-      <a href="../../index.html">BACK TO MAIN PAGE</a>
-    </div>
-
+    <a href="../../index.html" class="backNav">back to main</a>
     <h1>Lab 3 | Loops</h1>
     <ul>
       <li><a href="./exercise1/index.html">Exercise 1 - FizzBuzz</a></li>
