--- a/labs/lab4/exercise1/index.html
+++ b/labs/lab4/exercise1/index.html
@@ -3,22 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lab4 | Loops: FizzBuzz</title>
+    <title>Neapolitan</title>
   </head>
   <body>
-    <div style="text-align: right">
-      <a href="../index.html">BACK TO LAB 4</a>
-    </div>
-
-    <h1>Lab 4 | Arrays</h1>
-    <h2>Neapolitan</h2>
+    <a href="../index.html" class="backNav">back to lab</a>
+    <p>Lab 4 | Arrays</p>
+    <h1>Neapolitan</h1>
     <p>
       Create an array with strings for three different colors. Looping through
       that array, draw a rectangle for each of those colors to the screen
       horizontally, like neapolitan ice cream.
     </p>
-
+    <!-- import the p5.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
+    <!-- import the app.js file -->
     <script src="./app.js"></script>
   </body>
 </html>
