--- a/labs/lab4/exercise3/index.html
+++ b/labs/lab4/exercise3/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lab4 | Arrays: Click to Drop</title>
+    <title>Click to Drop</title>
   </head>
   <body>
-    <div style="text-align: right">
-      <a href="../index.html">BACK TO LAB 4</a>
-    </div>
-    <h1>Lab 4 | Arrays</h1>
-    <h2>Click to Drop</h2>
+    <a href="../index.html" class="backNav">back to lab</a>
+    <p>Lab 4 | Arrays</p>
+    <h1>Click to Drop</h1>
     <p>
       Build an application where, when a user clicks on the screen, a 'brick' is
       created at that x and y location, and falls down to the bottom of the
