--- a/labs/lab5/exercise2/index.html
+++ b/labs/lab5/exercise2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lab5 | DOM Exercises</title>
+    <title>That's a lot of div</title>
     <style>
       .square {
         width: 20px;
@@ -13,18 +13,18 @@
     </style>
   </head>
   <body>
-    <div style="text-align: right">
-      <a href="../index.html">BACK TO LAB 5</a>
-    </div>
-
-    <h1>Lab 5 | DOM Exercises</h1>
-    <h2>Thats a lot of div</h2>
+    <a href="../index.html" class="backNav">back to lab</a>
+    <p>Lab 5 | DOM Exercises</p>
+    <h1>Thats a lot of div</h1>
     <p>
       Write a loop that puts 100 square divs (20px x 20px) on the page, each
       with a different background color. Set their float CSS attribute to left.
     </p>
+    <!-- Target container for js -->
     <div id="container"></div>
+    <!-- Import the p5.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
+    <!-- Import the app.js file -->
     <script src="./app.js"></script>
   </body>
 </html>
