--- a/labs/lab5/index.html
+++ b/labs/lab5/index.html
@@ -6,9 +6,7 @@
     <title>Lab5</title>
   </head>
   <body>
-    <div style="text-align: right">
-      <a href="../../index.html">BACK TO MAIN PAGE</a>
-    </div>
+    <a href="../../index.html" class="backNav">back to main</a>
 
     <h1>Lab 5 | DOM Exercises</h1>
     <ul>
