--- a/labs/lab6/exercise3/index.html
+++ b/labs/lab6/exercise3/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lab 6 | Battle System</title>
+    <title>Lab 6 | Objects</title>
   </head>
   <body>
     <style>
@@ -19,11 +19,9 @@
         padding: 0;
       }
     </style>
-    <div style="text-align: right">
-      <a href="../index.html">BACK TO LAB 6</a>
-    </div>
-    <h1>Lab 6 | Objects</h1>
-    <h2>Battle System</h2>
+    <a href="../index.html" class="backNav">back to lab</a>
+    <p>Lab 6 | Objects</p>
+    <h1>Battle System</h1>
     <div>
       <p>
         Create a simple, JRPG battle system using two objects: one for an
