--- a/labs/lab6/index.html
+++ b/labs/lab6/index.html
@@ -6,14 +6,15 @@
     <title>Lab6 | Objects</title>
   </head>
   <body>
-    <div style="text-align: right">
-      <a href="../../index.html">BACK TO MAIN PAGE</a>
-    </div>
+    <a href="../../index.html" class="backNav">back to main</a>
 
     <h1>Lab 6 | Objects</h1>
     <ol>
       <li>
         <a href="./exercise1/index.html">List Display</a>
+      </li>
+      <li>
+        <a href="./exercise1-updated/index.html">List Display (Updated) </a>
       </li>
       <li>
         <a href="./exercise2/index.html">Virtual Pet</a>
