--- a/labs/lab7/exercise2/index.html
+++ b/labs/lab7/exercise2/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lab 7 | User Input & Interaction</title>
+    <title>Tip Calculator</title>
   </head>
   <body>
     <div style="text-align: right">
-      <a href="../index.html">BACK TO LAB 7</a>
+      <a href="../index.html">back to lab</a>
     </div>
     <p>Lab 7: User Input & Interaction</p>
     <h1>Tip Calculator</h1>
