--- a/labs/lab7/exercise3/index.html
+++ b/labs/lab7/exercise3/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lab 7 | User Input & Interaction</title>
+    <title>Number Guesser</title>
   </head>
   <body>
     <div style="text-align: right">
-      <a href="../index.html">BACK TO LAB 7</a>
+      <a href="../index.html">back to lab</a>
     </div>
 
     <p>Lab: User Input & Interaction</p>
@@ -23,12 +23,12 @@
       clicks the button.
     </p>
     <hr />
-    <!-- Input field for entering the number guess -->
-    <input type="text" id="guessInput" placeholder="Enter your guess" />
-    <br />
-
-    <!-- Button to submit the number guess -->
+    <h2>Number Guessing Game</h2>
+    <div><div id="guessList"></div></div>
+    <input type="number" id="guessInput" placeholder="Enter your guess" />
     <button id="guessButton">Guess</button>
+    <p id="message"></p>
+    <!-- <script src="./app.js"></script> -->
     <script src="./app.js"></script>
   </body>
 </html>
