--- a/labs/lab7/index.html
+++ b/labs/lab7/index.html
@@ -6,10 +6,7 @@
     <title>Lab 7 | User Input & Interaction</title>
   </head>
   <body>
-    <div style="text-align: right">
-      <a href="../../index.html">BACK TO MAIN PAGE</a>
-    </div>
-
+    <a href="../../index.html" class="backNav">back to main</a>
     <h1>Lab 7 | User Input & Interaction</h1>
     <ol>
       <li>
