--- a/index.html
+++ b/index.html
@@ -11,44 +11,33 @@
     <p>Summer 2023</p>
     <ul>
       <li>
-        <h2>Lab 1</h2>
-        <p>
-          <a href="./labs/lab1/index.html"
-            >Intro to p5.js | Personal Composition</a
-          >
-        </p>
+        Lab 1:
+        <a href="./labs/lab1/index.html"
+          >Intro to p5.js | Personal Composition</a
+        >
       </li>
       <li>
-        <h2>Lab 2</h2>
-        <p>
-          <a href="./labs/lab2/index.html"
-            >Animation and Conditional Operators</a
-          >
-        </p>
+        Lab 2:
+        <a href="./labs/lab2/index.html">Animation and Conditional Operators</a>
       </li>
       <li>
-        <h2>Lab 3</h2>
-        <p>
-          <a href="./labs/lab3/index.html">Loops</a>
-        </p>
+        Lab 3:
+        <a href="./labs/lab3/index.html">Loops</a>
       </li>
       <li>
-        <h2>Lab 4</h2>
-        <p>
-          <a href="./labs/lab4/index.html">Arrays</a>
-        </p>
+        Lab 4:
+        <a href="./labs/lab4/index.html">Arrays</a>
       </li>
       <li>
-        <h2>Lab 5</h2>
-        <p>
-          <a href="./labs/lab5/index.html">DOM</a>
-        </p>
+        Lab 5:
+        <a href="./labs/lab5/index.html">DOM</a>
       </li>
       <li>
-        <h2>Lab 6</h2>
-        <p>
-          <a href="./labs/lab6/index.html">Objects</a>
-        </p>
+        Lab 6:
+        <a href="./labs/lab6/index.html">Objects</a>
+      </li>
+      <li>
+        Lab 7: <a href="./labs/lab7/index.html">User Input & Interaction</a>
       </li>
     </ul>
   </body>
