--- a/labs/lab3/exercise1/index.html
+++ b/labs/lab3/exercise1/index.html
@@ -3,26 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lab3 | Loops: FizzBuzz</title>
+    <title>FizzBuzz</title>
   </head>
   <body>
-    <div style="text-align: right">
-      <a href="../index.html">BACK TO LAB 3</a>
+    <a href="../index.html" class="backNav">back to lab</a>
+    <p>Lab 3 | Loops</p>
+    <h1>FizzBuzz</h1>
+    <div>
+      <p>
+        Use a loop to draws 25 black circles to the screen, oriented
+        horizontally.
+      </p>
+
+      However,
+      <ol>
+        <li>
+          When the iterand is divisible by 3, draw a purple circle instead
+        </li>
+        <li>When the iterand is divisible by 5, draw a green square instead</li>
+        <li>
+          When the iterand is divisible by 3 AND 5, draw a blue square instead
+        </li>
+      </ol>
     </div>
-
-    <h1>Lab 3 | Loops: FizzBuzz</h1>
-    <p>
-      Use a loop to draws 25 black circles to the screen, oriented horizontally.
-    </p>
-
-    However,
-    <ol>
-      <li>When the iterand is divisible by 3, draw a purple circle instead</li>
-      <li>When the iterand is divisible by 5, draw a green square instead</li>
-      <li>
-        When the iterand is divisible by 3 AND 5, draw a blue square instead
-      </li>
-    </ol>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
     <script src="./app.js"></script>
   </body>
