--- a/labs/lab3/exercise3/index.html
+++ b/labs/lab3/exercise3/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lab3 | Loops: Circles inside of Circles</title>
+    <title>Circles inside of Circles</title>
   </head>
   <body>
-    <div style="text-align: right">
-      <a href="../index.html">BACK TO LAB 3</a>
-    </div>
-    <h1>Lab 3 | Loops: Circles inside of Circles</h1>
+    <a href="../index.html" class="backNav">back to lab</a>
+    <p>Lab 3 | Loops</p>
+    <h1>Circles inside of Circles</h1>
     <p>
       Use a loop to recreate this composition with only one line having a
       drawing command on it (rect/circle/line/etc..).
     </p>
+    <!-- Import the p5.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
+    <!-- Import the app.js file -->
     <script src="./app.js"></script>
   </body>
 </html>
