--- a/labs/lab4/exercise5/index.html
+++ b/labs/lab4/exercise5/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lab4 | Arrays: Raindrops</title>
+    <title>Raindrops</title>
   </head>
   <body>
-    <div style="text-align: right">
-      <a href="../index.html">BACK TO LAB 4</a>
-    </div>
-    <h1>Lab 4 | Arrays</h1>
-    <h2>Raindrops | Dripping Water (but more fun)</h2>
+    <a href="../index.html" class="backNav">back to lab</a>
+    <p>Lab 4 | Arrays</p>
+    <h1>Raindrops</h1>
     <p>
       Circles replaced with custom shapes to look like water drops and fall from
       the top, appearing randomly across the x-axis to look like rain
     </p>
+    <!-- import the p5.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
+    <!-- import the app.js file -->
     <script src="./app.js"></script>
   </body>
 </html>
