--- a/index.html
+++ b/index.html
@@ -37,8 +37,15 @@
         <a href="./labs/lab6/index.html">Objects</a>
       </li>
       <li>
+        Midterm:
+        <a href="https://pizzapup.github.io/n220spaceInvaders/index.html"
+          >Space Invaders</a
+        >
+      </li>
+      <li>
         Lab 7: <a href="./labs/lab7/index.html">User Input & Interaction</a>
       </li>
+      <li>Lab 8: <a href="./labs/lab8/index.html">Functions</a></li>
     </ul>
   </body>
 </html>
