adding lab 9 + its just avg w/input event

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         Lab 7: <a href="./labs/lab7/index.html">User Input & Interaction</a>
       </li>
       <li>Lab 8: <a href="./labs/lab8/index.html">Functions</a></li>
+      <li>Lab 9: <a href="./labs/lab9/index.html">Array Computation</a></li>
     </ul>
   </body>
 </html>
