--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
       </li>
       <li>Lab 8: <a href="./labs/lab8/index.html">Functions</a></li>
       <li>Lab 9: <a href="./labs/lab9/index.html">Array Computation</a></li>
+      <li>Lab 10: <a href="./labs/lab10/index.html">Events</a></li>
+      <!-- <li>Lab 11: <a href="./labs/lab11/index.html">Events (2)</a></li> -->
     </ul>
   </body>
 </html>
