--- a/labs/lab11/index.html
+++ b/labs/lab11/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lab 10 | Events</title>
+    <title>Lab 11 | Events (2)</title>
   </head>
   <body>
     <a href="../../index.html" class="backNav">back to main</a>
-    <h1>Lab 10 | Events</h1>
+    <h1>Lab 11 | Events (2)</h1>
     <ol>
       <li>
         <a href="./exercise1/index.html">Color Changer</a>
