--- a/labs/lab10/exercise1/index.html
+++ b/labs/lab10/exercise1/index.html
@@ -3,44 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Its just average</title>
+    <title>Color Changer</title>
+    <style>
+      .square {
+        width: 200px;
+        height: 200px;
+        background-color: #ccc;
+        float: left;
+        margin: 5px;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <div style="text-align: right">
       <a href="../index.html">back to lab</a>
     </div>
-    <p>Lab 9 | Array Computation</p>
-    <h1>Its just average</h1>
+    <p>Lab 10 | Events</p>
+    <h1>Color Changer</h1>
     <div>
-      Create an application that:
-      <ol>
-        <li>Takes in a list of comma-separated numbers from the user</li>
-        <li>Splits that list into an array of numbers</li>
-        <li>Converts the string version of the numbers into number versions</li>
-        <li>Loops through the array and sums up the values</li>
-        <li>Calculates the average of the array</li>
-        <li>
-          Displays to the user
-          <ol>
-            <li>The average</li>
-            <li>The sum</li>
-          </ol>
-        </li>
-        <li>Removes the text from the input</li>
-      </ol>
-    </div>
-    <div>
-      <label for="numbers-input">Input numbers separated by commas:</label>
-      <input id="numbers-input" type="text" />
-      <button id="submit">Calculate</button>
-      <ul>
-        <li>Numbers: <span id="numbers">0</span></li>
-        <li>Numbers: <span id="not-numbers">0</span></li>
-        <li>Sum: <span id="sum">0</span></li>
-        <li>Average: <span id="avg">0</span></li>
-      </ul>
-    </div>
+      Create an application with three grey, square divs, in a row. They should
+      be 200px by 200px, and all floated left. Give them a margin of 5px.
+      <br />
+      Using only one event handler, write event listeners to respond to a click
+      on each element. Each element should change to a different color: one red,
+      one green, and one blue. Use a data attribute on the elements to store the
+      color to be changed to.
+      <br />
 
+      The result, after clicking on the first and third, should look something
+      like this:
+    </div>
+    <!-- <img
+      src="https://iu.instructure.com/courses/2156188/files/156608468/download?wrap=1"
+      width="500"
+    /> -->
+    <div id="app"></div>
     <script src="./app.js"></script>
   </body>
 </html>
