--- a/labs/lab10/exercise3/index.html
+++ b/labs/lab10/exercise3/index.html
@@ -3,26 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Make Divs</title>
+    <title>Flash Cards</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div style="text-align: right">
       <a href="../index.html">back to lab</a>
     </div>
-    <p>Lab 9 | Array Computation</p>
+    <p>Lab 10 | Events</p>
 
-    <h1>Make Divs</h1>
+    <h1>Flash Cards</h1>
     <div>
-      Given the array:
-      <p>
-        let objects = [ <br />{ color: "#FF0000", height: 100, width: 300 },<br />
-        { color: "#FFFF00", height: 200, width: 200 }, <br />{ color: "#ff0000",
-        height: 300, width: 100 }, ];
-      </p>
-      Write a loop that creates three divs based on the data in the array. You
-      should only have one
-      <span style="color: blue">document.createElement</span> in your code.
+      An application with 3 buttons that ask questions. For instance, they might
+      ask "What is the capital of Indiana?". Each button should have a
+      data-answer attribute that lists the answer.
+      <br />
+      When a button is clicked, display the answer to the button's question in a
+      div. Use only one function, and that function must make use of the
+      button's data-attribute.
     </div>
+    <hr />
+    <div id="output">Answer will display here</div>
+
     <div id="app"></div>
     <script src="./app.js"></script>
   </body>
